--- a/requirements.txt
+++ b/requirements.txt
@@ -7,14 +7,20 @@ annotated-types
 antlr4-python3-runtime
 anyio
 appnope
+argon2-cffi
+argon2-cffi-bindings
+arrow
 asgiref
 asteroid-filterbanks
 asttokens
+async-lru
 attrs
 av
+babel
 backoff
 bcrypt
 beautifulsoup4
+bleach
 build
 cachetools
 certifi
@@ -32,6 +38,7 @@ cycler
 dataclasses-json
 debugpy
 decorator
+defusedxml
 Deprecated
 dirtyjson
 distro
@@ -41,11 +48,13 @@ einops
 executing
 fastapi
 faster-whisper
+fastjsonschema
 ffmpy
 filelock
 filetype
 flatbuffers
 fonttools
+fqdn
 frozenlist
 fsspec
 google-auth
@@ -69,13 +78,29 @@ InstructorEmbedding
 ipykernel
 ipython
 ipython_pygments_lexers
+ipywidgets
+isoduration
 jedi
 Jinja2
 jiter
 joblib
+json5
+jsonpointer
+jsonschema
+jsonschema-specifications
 julius
+jupyter
+jupyter-console
+jupyter-events
+jupyter-lsp
 jupyter_client
 jupyter_core
+jupyter_server
+jupyter_server_terminals
+jupyterlab
+jupyterlab_pygments
+jupyterlab_server
+jupyterlab_widgets
 kiwisolver
 kubernetes
 lightning
@@ -106,15 +131,21 @@ marshmallow
 matplotlib
 matplotlib-inline
 mdurl
+mistune
 mmh3
 monotonic
 more-itertools
 mpmath
 multidict
 mypy-extensions
+nbclient
+nbconvert
+nbformat
 nest-asyncio
 networkx
 nltk
+notebook
+notebook_shim
 numba
 numpy
 oauthlib
@@ -137,12 +168,14 @@ orjson
 overrides
 packaging
 pandas
+pandocfilters
 parso
 pexpect
 pillow
 platformdirs
 posthog
 primePy
+prometheus_client
 prompt_toolkit
 propcache
 protobuf
@@ -167,16 +200,21 @@ PyPika
 pyproject_hooks
 python-dateutil
 python-dotenv
+python-json-logger
 python-multipart
 pytorch-lightning
 pytorch-metric-learning
 pytz
 PyYAML
 pyzmq
+referencing
 regex
 requests
 requests-oauthlib
+rfc3339-validator
+rfc3986-validator
 rich
+rpds-py
 rsa
 ruamel.yaml
 ruamel.yaml.clib
@@ -187,6 +225,7 @@ scikit-learn
 scipy
 semantic-version
 semver
+Send2Trash
 sentence-transformers
 sentencepiece
 shellingham
@@ -204,8 +243,10 @@ sympy
 tabulate
 tenacity
 tensorboardX
+terminado
 threadpoolctl
 tiktoken
+tinycss2
 tokenizers
 tomlkit
 torch
@@ -219,17 +260,22 @@ tqdm
 traitlets
 transformers
 typer
+types-python-dateutil
 typing-inspect
 typing_extensions
 tzdata
+uri-template
 urllib3
 uvicorn
 uvloop
 watchfiles
 wcwidth
+webcolors
+webencodings
 websocket-client
 websockets
 whisperx
+widgetsnbextension
 wrapt
 yarl
 zipp
